# polyarb

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEMO.md  LICENSE  Makefile  README.md  SPEC.md  pyproject.toml  uv.toml
.claude/: settings.json
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
docs/: API_NOTES.md  HEDGING.md  POLYARB_DOCS.md  QUICK_THOUGHTS_OF_THE_DEV.md  RELATIONS.md  RUNNING.md  STRATEGY_BACKLOG.md  TESTING.md
reports/: floor-analysis.md
scripts/: demo.py  record_fixtures.py
src/polyarb/: __init__.py  cli.py  config.py  logging_setup.py  models.py  recording.py
src/polyarb/clients/: base.py  clob.py  data.py  gamma.py  gas.py  ratelimit.py  ws.py
src/polyarb/detectors/: base.py  complement.py  crossvenue.py  dependency.py  negrisk_basket.py  partial_basket.py
src/polyarb/engine/: backtest.py  bookcache.py  confirm.py  filters.py  heartbeat.py  metrics.py  ranking.py  scanner.py  settlement.py  streaming.py
src/polyarb/execution/: __init__.py
src/polyarb/pricing/: book_quality.py  fees.py  sizing.py
src/polyarb/resolution/: relations.py  risk.py
src/polyarb/sinks/: notify.py  store.py
tests/: helpers.py  test_backtest.py  test_book_quality.py  test_bookcache.py  test_bugfixes.py  test_clients.py  test_complement.py  test_confirm.py  test_dependency.py  test_fees.py  test_filters.py  test_gas.py  test_invariants.py  test_logging_setup.py  test_metrics.py  test_models.py  test_negrisk.py  test_notify.py  test_partial_basket.py  test_ranking.py  test_ratelimit.py  test_relations.py  test_risk.py  test_scanner.py  test_settlement.py  test_sizing.py  test_smoke.py  test_store.py  test_streaming.py  test_ws.py
tests/fixtures/: clob_book_binary.json  clob_book_negrisk_outcome.json  clob_midpoint.json  clob_price.json  data_trades_sample.json  gamma_feed_market.json  gamma_feefree_market.json  gamma_negrisk_event.json  ws_market_capture.json
