[project]
name = "polyarb"
version = "0.5.0a6"
description = "Read-only Polymarket structural-arbitrage scanner. Detection is the product."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "Jonathan Funke-Kaiser", email = "me@jof.dev" }]
dependencies = [
    "httpx>=0.27",
    "websockets>=13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "sqlmodel>=0.0.21",
    "typer>=0.12",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
# Execution module only (Phase 5, default OFF). py-clob-client is ARCHIVED/non-functional;
# the replacement is `polymarket-client` (beta). See docs/API_NOTES.md. Detection does NOT
# need this group. Left commented until Phase 5 so detection installs stay lean.
# execution = ["polymarket-client>=0.0.0"]

[project.scripts]
polyarb = "polyarb.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pytest-socket>=0.7",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "polyarb"
module-root = "src"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["polyarb"]
warn_unreachable = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
# --disable-socket enforces the SPEC "tests never hit the live API" constraint at the socket
# layer — load-bearing now that streaming is the default (a bare Settings() would otherwise open a
# real market WS). --allow-unix-socket permits asyncio's AF_UNIX self-pipe. A test that genuinely
# needs a network socket must opt in with @pytest.mark.enable_socket.
addopts = "-q --disable-socket --allow-unix-socket"
# Put src/ on sys.path directly so the suite imports polyarb even when the editable
# install's polyarb.pth is unreadable. On macOS, `uv run` re-applies the BSD UF_HIDDEN
# flag to the installed *.pth, and Python 3.12's site.addpackage silently skips hidden
# .pth files — which otherwise breaks collection with "No module named 'polyarb'".
pythonpath = ["src"]
